...
                <Donut progress={65} />
                <View style={{ flex: 1 }}>
                  <View style={styles.bigCtaRow}>
                    <Button
                      label={t("continue")}
                      onPress={handleContinuePress}
                      testID="home_continue_btn"
                    />
                    <Button
                      label={t("repeat")}
                      variant="secondary"
                      testID="home_repeat_btn"
                      onPress={() =>
...
