...
                    </Typography>
                  </View>
                  <View style={styles.buttonContainer}>
                    <Button
                      label={t("startButton")}
                      onPress={handleStartLearning}
                      testID="welcome_start_btn"
                    />
                    <View style={{ height: ds.spacing.sm }} />
                    <Button
                      label={t("continueLearning")}
                      onPress={handleLogin}
                      variant="ghost"
...
